--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://sexxyrexxy.github.io/rexportfolio/",
   "name": "rexportfolio",
   "version": "0.1.0",
   "private": true,
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"run npm build",
+    "deploy":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
