--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://sexxyrexxy.github.io/rexportfolio/",
+  "homepage": "https://sexxyrexxy.github.io/rexportfolio/",
   "name": "rexportfolio",
   "version": "0.1.0",
   "private": true,
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -24,8 +25,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"run npm build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "run npm build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
